# xfa-extract

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: xfa-internals.md
skill/: REFERENCE.md  SKILL.md
src/xfa_extract/: __init__.py  cli.py  template.py  xmlutil.py
tests/: conftest.py  make_fixtures.py  test_acceptance.py  test_template.py
tests/real/: fetch_corpus.py  run_real.py
